--- a/TrendyolAPI.csproj
+++ b/TrendyolAPI.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Models\Summary.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="TrendyolClient.cs" />
-    <Compile Include="Models\Hesap.cs" />
+    <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\AResult.cs" />
     <Compile Include="Models\Card.cs" />
